# durduff

./: .gitignore  COPYING  Cargo.toml  Makefile  NEWS  README  README.md  build.rs  dirdiff.1.scd  durduff.1.scd  make-prebuilt-tarball.sh  rustfmt.toml  with-git.mk
completions.in/bash/: dirdiff
completions.in/fish/: dirdiff.fish
completions.in/zsh/: _dirdiff
completions/bash/: dirdiff  durduff
completions/fish/: dirdiff.fish  durduff.fish
completions/zsh/: _dirdiff  _durduff
src/: cli.rs  cli_args.rs  error.rs  main.rs  osvec.rs  verdict.rs  verdictor.rs
src/io/: color_codes.rs  diff_printer.rs  fps_buf_writer.rs  line_status.rs  line_status_color_codes.rs  manual_buf_writer.rs  mod.rs  output_record.rs  percent_path.rs  print_diff.rs  progress.rs  progress_status.rs  read_int_mitigator.rs  record_printer.rs
src/iter/: mod.rs  ok_iter.rs  rec_dir_iter.rs  sum_iter.rs
test-data/different-symlink-targets-same-contents/: func.test
test-data/identical/: func.test
test-data/identical/new/foo/: a
test-data/problematic-file-names/: func.test
test-data/problematic-file-names/new/foo/: a
test-data/problematic-file-names/old/foo/: a
test-data/rudimentary/: func.test
test-data/rudimentary/new/: c
test-data/rudimentary/old/: c  d
