[package]
name = "durduff"
version = "0.1.0-alpha.1"
authors = ["Jakub Alba <jakub@yakubin.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "compare directories file by file"
readme = "README.md"
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "dir", "diff", "directory"]
documentation = "https://docs.rs/crate/durduff"
homepage = "https://git.sr.ht/~yakubin/durduff"
repository = "https://git.sr.ht/~yakubin/durduff"
build = "build.rs"

[dependencies]
libc = "0.2.71"
getopts = "0.2"
percent-encoding = "2.1.0"

[dev-dependencies]
enum-iterator = "0.6.0"

[package.metadata.deb]
copyright = "2019, Jakub Alba <jakub@yakubin.com>"
license-file = ["COPYING", "3"]
section = "utils"
assets = [
    ["target/release/durduff", "usr/bin/", "755"],
    ["completions/bash/durduff", "usr/share/bash-completion/completions/", "644"],
    ["completions/zsh/_durduff", "usr/share/zsh/vendor-completions/", "644"],
    ["completions/fish/durduff.fish", "usr/share/fish/vendor_completions.d/", "644"],
    ["target/assets/durduff.1.gz", "usr/share/man/man1/", "644"],
    ["target/assets/NEWS.gz", "usr/share/doc/durduff/changelog.gz", "644"],
]
extended-description = """\
durduff prints differences between two directory trees to standard output. By \
default, it UTF-8 percent-encodes file paths. Any non-Unicode byte sequences \
are replaced with U+FFFD REPLACEMENT CHARACTER. This output is not \
script-friendly. For scripts parsing the output of durduff, printing paths as \
raw bytes separated with NUL can be turned on with a CLI option.
"""
